fix: api.yaml not being served on /openapi.yaml and /doc not showing openapi documentation
